<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:padding="15dp"
            android:background="@color/toolbarColor">
            <TextView
                android:id="@+id/title"
                android:textColor="#FFFFFF"
                android:text="sample"
                android:textSize="20sp"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:maxLines="10"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"/>
            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:layout_toStartOf="@+id/title"
                android:layout_centerInParent="true"
                android:importantForAccessibility="no"
                android:src="@drawable/poster_unavailable"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/toolbarAccent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_section"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/release_date_text"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:id="@+id/rating_layout"
                android:layout_below="@id/release_section">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/rating_text"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"/>

        <Button
            android:id="@+id/buy_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/amazon_button_string"
            android:text="@string/amazon_button_string"
            android:padding="10dp"/>

        <Button
            android:id="@+id/find_theater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription="@string/movies_button_string"
            android:text="@string/movies_button_string"
            android:padding="10dp"/>
        <Button
            android:id="@+id/search_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_again_button"
            android:contentDescription="@string/search_again_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>